[tool.poetry]
name = "user resgistration"
version = "0.1.0"
description = "A user registration API with file handling"
authors = ["Cozyamy <cozyamy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
python-multipart = "^0.0.9"
pillow = "^10.3.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
